# osim2026

./: .gitignore  README.md  pyproject.toml
engine/: pyproject.toml
engine/docs/: CONTEXT-P1-EVENTBUS.md  CONTEXT-P1-SUPPLEMENT.md  CONTEXT-P1-osim-ui-integration-TODO.md  CONTEXT-P1-pps-ausloeser.md  CONTEXT-P2-PLAN.md
engine/experiments/: diag_ress_einsatz.py
engine/osim2004-trace/: Makefile
engine/osim2004-trace/lcg/: main.c
engine/osim2004-trace/python-reference/: README.md
engine/scripts/: build_passozmenge_minimal_fixture.py  demo_stream_run.py
engine/src/osim_engine/azeit/: __init__.py  aeinsatzzeit_wunsch.py  agruppe.py
engine/src/osim_engine/core/: event.py  simulator.py  verteilung.py
engine/src/osim_engine/decisions/: aufgabe.py  strategie_eet.py
engine/src/osim_engine/generator/: __init__.py
engine/src/osim_engine/insights/: __init__.py  classes.py
engine/src/osim_engine/io/: __init__.py  azeitsim.py  otx_diff.py  otx_inspect.py  otx_loader.py  otx_reader.py  otx_writer.py
engine/src/osim_engine/observability/: __init__.py  bus.py
engine/src/osim_engine/pps/: __init__.py  durchlaufplan.py  parameter.py  prozess_dll.py  verteilung.py
engine/src/osim_engine/resources/: __init__.py  aktor.py  beleg.py  einsatzzeit.py  entitaet.py  kollektion.py  ressource.py
engine/src/osim_engine/streaming/: __init__.py  attach.py  frame.py  jsonl_writer.py  partial.py  registry.py  run_dir.py  run_otx.py  seq.py
engine/tests/: conftest.py
engine/tests/diff/: test_verteil_bit_exact.py
engine/tests/diff/fixtures/: verteil_gleich_10.jsonl  verteil_konstant_5.jsonl  verteil_normal_grenz_ew100_sa20_min50_max200.jsonl
engine/tests/diff/hand_trace/: README.md  p4_c_menge.md  test_v4_one_node_one_ress.py  test_v5_5_speicher_load_balanced.py  test_v5_erzeuger_verbraucher.py  test_v6_5_einsatzzeit_tag_mittagspause.py  test_v7_pool_three_machines.py  test_v8_multi_assoz_machine_material.py  v2_one_node_plan.md  v6_pause_unterbricht_proz.md
engine/tests/fixtures/otx/: passozmenge_minimal.otx
engine/tests/integration/: test_otx_loader.py  test_p3_aktor.py  test_p4_menge.py  test_p5_entscheider_data.py  test_p5d_konkrete_aufgaben.py  test_p5f_eet_strategien.py  test_p5jk_aco.py  test_p5l_generator.py  test_p5n_insights.py  test_ress_einsatz_p5e.py  test_run_otx.py  test_streaming.py  test_streaming_bench.py  test_streaming_einsatz_queue.py  test_streaming_kpi.py  test_streaming_partial.py  test_streaming_schema.py  test_v1_smoke.py  test_v7_pool.py
engine/tests/integration/golden/: README.md  gantt_durchlauf.full.jsonl  gantt_durchlauf.partial.jsonl  gantt_einsatz.full.jsonl  gantt_einsatz.partial.jsonl  gantt_schicht.full.jsonl  gantt_schicht.partial.jsonl  gantt_wartequeue.full.jsonl  gantt_wartequeue.partial.jsonl  kennzahl_dlz.full.jsonl  kennzahl_dlz.partial.jsonl  kpi_auswertung.full.jsonl  kpi_auswertung.partial.jsonl  lifecycle.broken.jsonl  lifecycle.full.jsonl  lifecycle.partial.jsonl  reporting_record.full.jsonl  reporting_record.partial.jsonl
engine/tests/unit/: test_event_pool_sorting.py  test_eventbus.py  test_gantt_kennzahl_fields.py  test_kennzahl_dlz_listener.py  test_p4_parameter.py
osim-ui/: .env.example  .gitignore  CLAUDE.md  Dockerfile  MORNING-BRIEFING.md  README.md  docker-compose.yml  pyproject.toml
osim-ui/.planning/: HANDOFF-2026-05-27.md  HANDOFF-2026-05-28.md  PROJECT.md  ROADMAP.md  STATE.md
osim-ui/.planning/research/: 3fls-patterns.md  README.md  SUMMARY.md  architecture-decisions.md  copy-paste-guide.md  osim-engine-api.md  osim2004-ui-analysis.md  osim2004-viewer-catalog.md
osim-ui/app/: main.py
osim-ui/app/api/schemas/: common.py  (+3 more)
osim-ui/app/auth/: dependencies.py  firebase.py  middleware.py  router.py  schemas.py
osim-ui/app/core/: config.py  database.py  errors.py  logging.py
osim-ui/app/db/: models.py
osim-ui/app/models/: __init__.py  edit_lock.py  model.py  model_version.py  tenant.py  user.py
osim-ui/app/schemas/: __init__.py  json_tree.py  model.py
osim-ui/app/services/: auth_service.py  json_tree_service.py  lock_service.py  model_service.py  otx_json_tree.py  otx_service.py  run_service.py  storage.py  tenant_service.py
osim-ui/db/: alembic.ini
osim-ui/db/alembic/: env.py
osim-ui/db/migrations/: env.py
osim-ui/docs/: 3FLS-EAM-STYLE-GUIDE.md  ARCHITECTURE.md  PHASE-1-ACCEPTANCE.md  PHASE-1-DEMO.md  PHASE-1-VERIFICATION.md  engine-coverage.md
osim-ui/infra/firebase/: .firebaserc  seed-users.sh
osim-ui/portal/: .env.example  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  postcss.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts
osim-ui/portal/e2e/: 00-smoke.spec.ts  01-auth-flow.spec.ts  02-upload-edit-save.spec.ts  03-viewer-navigation.spec.ts  04-lock-recovery.spec.ts  demo-flow.spec.ts  lock-conflict.spec.ts  manual-pressmenge-uat.spec.ts  matrix-cell-edit-persistence.spec.ts  modeling-flow.spec.ts  passozmenge-block-copy-paste.spec.ts  reload-persistence.spec.ts  snapshot-restore.spec.ts
osim-ui/portal/src/: app.tsx  main.tsx  routeTree.gen.ts  test-setup.ts
osim-ui/portal/tests/: live-stream.spec.ts
osim-ui/scripts/: dev-up.sh  otx_coverage_report.py  otx_roundtrip_audit.py  seed_demo_models.sh  seed_firebase_emulator.py  wait-healthy.sh
osim-ui/tests/: conftest.py  test_alembic.py  test_auth_me.py  test_edit_lock.py  test_json_tree.py  test_model_upload.py  test_otx_roundtrip.py  test_storage.py
osim-ui/tests/app/: test_health.py
osim-ui/tests/backend/: conftest.py  test_auth_endpoints.py  test_conftest_fixtures.py  test_database.py  test_health_with_storage.py  test_lazy_bootstrap_race.py  test_lock_endpoints.py  test_lock_service.py  test_model_service.py  test_models_endpoints.py  test_otx_json_tree.py  test_otx_roundtrip.py  test_otx_upload_roundtrip.py  test_runs_endpoints.py  test_search_path_isolation.py  test_storage.py
osim-ui/tests/fixtures/: .gitkeep
osim-ui/tests/integration/: __init__.py  conftest.py  test_full_roundtrip.py  test_large_model.py  test_tenant_isolation.py
(+707 files in other folders)
