[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "osim-engine"
version = "0.1.0"
description = "Headless discrete-event simulator (process-flow on node/edge graphs). Reengineering of OSim2004 based on Uwe Jonssons 2003 dissertation."
authors = [{name = "Jörg Werner Fischer"}]
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    "pydantic>=2.6",
    "numpy>=1.26",
    "scipy>=1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "jsonschema>=4.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src/osim_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
