# Phase 1 — sync psycopg3 + uv-source für engine + Test-Marker (D-18, RESEARCH §Assumption A8)
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "osim-ui"
version = "0.1.0"
description = "Web-UI und Orchestrator-Backend für die headless osim-engine. Mehrbenutzerfähig, container-orchestriert, integrierbar in 3fls (tbx_stzrim)."
authors = [{name = "Jörg Werner Fischer"}]
requires-python = ">=3.13"
readme = "README.md"

# Korrektur D-18 (2026-05-21): 3fls-Stack-Parität → sync psycopg3 statt async asyncpg.
# google-cloud-storage / google-cloud-pubsub / websockets sind in Phase 1 nicht nötig
# (Live-Viz kommt erst in Phase 4, GCS-Storage in Phase 5). boto3 reicht für Minio über S3-API.
# python-multipart ist Pflicht für FastAPI UploadFile (Plan 04).
# osim-engine wird als editable-install via [tool.uv.sources] (siehe unten) eingezogen.
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "pydantic>=2.6",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "orjson>=3.10",
    "httpx>=0.28",
    "structlog>=25.0",
    "firebase-admin>=7.2",
    "boto3>=1.42.69",
    "python-multipart>=0.0.20",
    "osim-engine",
]

[tool.uv.sources]
osim-engine = { path = "../osim-engine/engine", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "httpx>=0.28",  # für TestClient
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers"]
filterwarnings = [
    "error::pytest.PytestUnknownMarkWarning",
]
markers = [
    "requires_postgres: Test benötigt Postgres @ localhost:5432",
    "requires_firebase_emulator: Test benötigt Firebase Auth Emulator @ localhost:9099",
    "requires_minio: Test benötigt Minio @ localhost:9000",
    "requires_engine: Test benötigt importierbare osim_engine-Installation",
    "integration: Integration-Test mit echter DB",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
ignore = []

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
